<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.MainActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="65dp"
        android:layout_marginTop="57dp"
        android:text="Our Vehicle Manager"
        android:textColor="@color/black"
        android:textSize="28dp" />

    <Button
        android:id="@+id/buttonAddVehicle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="34dp"
        android:text="@string/add_vehicle" />

    <Button
        android:id="@+id/buttonEditVehicle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="52dp"

        android:layout_marginTop="185dp"
        android:text="@string/edit_vehicle" />

    <Button
        android:id="@+id/buttonDeleteVehicle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="52dp"

        android:layout_marginTop="240dp"
        android:text="@string/delete_vehicle" />

    <Button
        android:id="@+id/buttonGetVehicle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonDeleteVehicle"
        android:layout_alignParentStart="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="10dp"
        android:text="@string/get_vehicle" />

    <ListView
        android:id="@+id/vehicle_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/buttonGetVehicle"
        android:layout_marginTop="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"/>




</RelativeLayout>