<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/editTextVehicleMake"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:hint="Enter Vehicle Make"
        android:singleLine="true"
        android:paddingStart="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp">
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextVehicleModel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextVehicleMake"
        android:hint="Enter Vehicle Model"
        android:singleLine="true"
        android:paddingStart="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"/>
    <EditText
        android:id="@+id/editTextVehicleYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextVehicleModel"
        android:hint="Enter Vehicle Year"
        android:inputType="number"
        android:singleLine="true"
        android:paddingStart="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"/>

</RelativeLayout>