<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/editTextVehicleEditMake"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:hint="Enter Vehicle Make"
        android:singleLine="true"
        android:paddingStart="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextVehicleEditModel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextVehicleEditMake"
        android:hint="Enter Vehicle Model"
        android:singleLine="true"
        android:paddingStart="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"/>
    <EditText
        android:id="@+id/editTextVehicleEditYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextVehicleEditModel"
        android:hint="Enter Vehicle Year"
        android:inputType="number"
        android:singleLine="true"
        android:paddingStart="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"/>

</RelativeLayout>