<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextVehicleEditById"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter vehicle Id"
        android:paddingStart="10dp"
        android:inputType="number"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        />
    <requestFocus />
</RelativeLayout>